--- a/config/SolrMarc/config.properties
+++ b/config/SolrMarc/config.properties
@@ -33,5 +33,5 @@ solr.hosturl = http://localhost:8983/solr/update
 # MARC handling parameters
 marc.to_utf_8 = true
 marc.permissive = true
-marc.default_encoding = MARC8
+marc.default_encoding = UTF8
 marc.include_errors = false
