start adding custom mappings for FLO

--- a/config/SolrMarc/index.properties
+++ b/config/SolrMarc/index.properties
@@ -95,3 +95,41 @@ map.format = Unknown
 pattern_map.lc_alpha.pattern_0 = ^([A-Z]{1,3})\\d+.*=>$1
 
 pattern_map.isbn_clean.pattern_0 = ([- 0-9]*[0-9]).*=>$1
+
+# ---------------------------------------------------- BEGIN FLO customizations
+# 009 -ao
+#     ^^^
+#     || `-- [2] online?
+#     | `--- [1] available?
+#      `---- [0] suppressed?
+suppressed = 009[0]
+available = 009[1]
+online = 009[2]
+# RDA 33x fields
+content_type = 336b
+media_type = 337b
+carrier_type = 338b
+content_type_display = 336a
+media_type_display = 337a
+carrier_type_display = 338a
+# 852 = holdings data for display
+call_number_display = 852khim
+# 856 = online access
+link = 856u
+link_text = 856y
+link_note_public = 856z
+link_note_private = 856x
+# 859 = coded holdings data
+institution = 859a
+institution_display = 859a, institution_map.properties
+location = 859b
+location_display = 859b, location_map.properties
+call_number_sort = 859c
+item_status = 859s
+#item_loc = 859l
+#item_temp_loc = 859m
+item_type = 859t
+#item_temp_type = 859u
+holdings_data = 859z
+# ---------------------------------------------------- END FLO customizations
+
