--- a/config/SolrMarc/index.properties
+++ b/config/SolrMarc/index.properties
@@ -97,7 +97,15 @@ pattern_map.lc_alpha.pattern_0 = ^([A-Z]{1,3})\\d+.*=>$1
 pattern_map.isbn_clean.pattern_0 = ([- 0-9]*[0-9]).*=>$1
 
 # ---------------------------------------------------- BEGIN FLO customizations
-# 009 -ao
+doctype = 000[6], (pmap.doctype), first
+pmap.doctype_0 = ^[acdefgijkmoprt]=>bib
+#pmap.doctype_1 = ^[uvxy]=>mfhd
+#pmap.doctype_2 = ^[z]=>auth
+#pmap.doctype_3 = ^[w]=>classification
+#pmap.doctype_4 = ^[q]=>community
+pmap.doctype_9 = ^.=>unknown
+
+# 009 NYY
 #     ^^^
 #     || `-- [2] online?
 #     | `--- [1] available?
@@ -106,30 +114,45 @@ suppressed = 009[0]
 available = 009[1]
 online = 009[2]
 # RDA 33x fields
-content_type = 336b
-media_type = 337b
-carrier_type = 338b
-content_type_display = 336a
-media_type_display = 337a
-carrier_type_display = 338a
+rda_content_type = 336b
+rda_media_type = 337b
+rda_carrier_type = 338b
+rda_content_type_facet = 336a
+rda_media_type_facet = 337a
+rda_carrier_type_facet = 338a
+rda_content_type_display = 336a
+rda_media_type_display = 337a
+rda_carrier_type_display = 338a
 # 852 = holdings data for display
-call_number_display = 852khim
+#call_number_display = 852khim
 # 856 = online access
-link = 856u
-link_text = 856y
-link_note_public = 856z
-link_note_private = 856x
-# 859 = coded holdings data
-institution = 859a
-institution_display = 859a, institution_map.properties
-location = 859b
-location_display = 859b, location_map.properties
-call_number_sort = 859c
-item_status = 859s
-#item_loc = 859l
-#item_temp_loc = 859m
-item_type = 859t
-#item_temp_type = 859u
-holdings_data = 859z
+#link = 856u
+#link_text = 856y
+#link_note_public = 856z
+#link_note_private = 856x
+# 952 = coded holdings data
+#   indicator 1 = #
+#   indicator 2 = 0 (in library, non-circulating? unavailable?)
+#                 1 (in library, circulating? available?)
+#                 2 (online)
+# EXAMPLES:
+#   952 #0 $i ecl
+#          $a Emerson
+#          $l 123456|=|ecl|=|ECL-REF|=|Emerson Reference - Does Not Circulate|=|[X]|=|BL715 .G713 1986|=|...
+#   952 #2 $i flo
+#          $a All FLO libraries
+#          $o 37275|=|flo|=|FLO-EBRARY|=|Ebrary|=|http://link.flo.org/ebrary/ebr123456|=|Full text (FLO users only)
+institution = 952i
+institution_facet = 952a
+library_holdings = 952l
+online_access = 952o
+#institution_display = 952a, institution_map.properties
+#location_display = 952b, location_map.properties
+#call_number_sort = 952c
+#item_status = 952s
+#item_loc = 952l
+#item_temp_loc = 952m
+#item_type = 952t
+#item_temp_type = 952u
 # ---------------------------------------------------- END FLO customizations
 
