add mapping for flo

--- a/config/SolrMarc/translation_maps/institution_map.properties
+++ b/config/SolrMarc/translation_maps/institution_map.properties
@@ -1,6 +1,7 @@
 ecl = Emerson College
 eds = Episcopal Divinity School
 emc = Emmanuel College
+flo = All of FLO
 les = Lesley University
 mca = Massachusetts College of Art and Design
 mcp = Massachusetts College of Pharmacy and Health Sciences
